[tool.poetry]
name = "liblab"
version = "0.1.0"
description = "Helper library for testing operating systems and networks"
authors = ["David Shlemayev <david.shlemayev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
libvirt-python = "^10.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.4"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.idea
  | \.benchmarks
  | \.mypy_cache
  | \.pytest_cache
  | env
  | venv
  | \.venv
  | \.poetry_env
)/
'''

[tool.isort]
profile = "black"
line_length = 99
skip_glob = "env,.poetry_env"
combine_as_imports = true

[tool.ruff]
lint.ignore = ["F403"]
target-version = "py311"
line-length = 99

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
